--- a/index.html
+++ b/index.html
@@ -120,6 +120,11 @@
                     const modal = new bootstrap.Modal(document.getElementById('playerModal'));
                     modal.show();
                 }, 2000);
+                if (!(playerOneStored && playerOneStored)) {
+                    const modal = new bootstrap.Modal(document.getElementById('playerModal'));
+                    modal.show();
+                }
+
             }
 
             // Handle form submission
@@ -164,6 +169,8 @@
                 });
             });
         });
+
+
     </script>
 
 
